--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -20,6 +20,21 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-
+        <TextBox Grid.Column="0" HorizontalAlignment="Center" Grid.Row="0" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="0" HorizontalAlignment="Center" Grid.Row="2" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="0" HorizontalAlignment="Center" Grid.Row="3" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Center" Grid.Row="0" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Center" Grid.Row="3" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Center" Grid.Row="0" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Center" Grid.Row="2" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="2" HorizontalAlignment="Center" Grid.Row="3" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="3" HorizontalAlignment="Center" Grid.Row="0" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="3" HorizontalAlignment="Center" Grid.Row="1" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="3" HorizontalAlignment="Center" Grid.Row="2" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
+        <TextBox Grid.Column="3" HorizontalAlignment="Center" Grid.Row="3" Text="?" VerticalAlignment="Center" Width="120" FontSize="36" TextAlignment="Center"/>
     </Grid>
 </Window>
